changed pull_interval to non boolean casting

--- a/conducteur/Makefile
+++ b/conducteur/Makefile
@@ -1,5 +1,3 @@
-
-# define variables
 CC:g++
 CFLAGS:-std=c++11 -c -Wall
 CPPFLAGS:-I/usr/include/  -lcurl -lcurlpp -lpqxx
@@ -9,10 +7,11 @@ CPPFLAGS:-I/usr/include/  -lcurl -lcurlpp -lpqxx
 all: conducteur
 
 conducteur: main.o
-$(CC) main.o conducteur
+$(CC) ($CFLAGS) main.o -o conducteur ($CPPFLAGS)
+    main.o: main.cpp
 
 main.o: main.cpp
-$(CC) $(CFLAGS) main.cpp
+$(CC) $(CFLAGS) main.cpp ($CPPFLAGS)
 
 clean:
 rm -rf *.o conducteur
